[package]
name = "server_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_server_emulator"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "rust_server_emulator"
path = "src/main.rs"

[features]
lua_server = []
rust_server = []

[dependencies]
pyo3 = { version = "0.25.0", features = ["auto-initialize"]}
libloading = "0.8"
mlua = { version = "0.11.4", features = ["lua54", "vendored"]}

[dependencies.server_emulator_macro]
path = "src/lib"