[package]
name = "server_emulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_emulator"
path = "src/main.rs"

[features]
lua_server  = []
rust_server = []
log_calls = ["server_emulator_macro/log_calls"]

[dependencies]
libloading = "0.8"
mlua = { version = "0.11.4", features = ["lua54", "vendored"]}

[dependencies.server_emulator_macro]
path = "src/lib"
features = ["log_calls"]
